--- a/app/pages/spiderlist/spiderlist.html
+++ b/app/pages/spiderlist/spiderlist.html
@@ -4,5 +4,5 @@
 
 <ion-content class="spiderlist">
     TODO: list of spiders
-    <button fab fab-right fab-bottom (click)="addSpiderTapped($event)">+</button>
+    <button fab fab-right fab-bottom (click)="addSpiderTapped()"><ion-icon name='add'></ion-icon></button>
 </ion-content>
