re-use page to add spider for viewing existing one

--- a/app/pages/SpiderList.html
+++ b/app/pages/SpiderList.html
@@ -3,7 +3,7 @@
 </ion-navbar>
 
 <ion-content class="spiderlist">
-    <ion-card *ngFor="#spider of model">
+    <ion-card *ngFor="#spider of model" (click)="gotoDetails(spider)">
         <div *ngIf="spider.img">
             <img [src]="imgurl(spider)" />
         </div>
@@ -12,6 +12,7 @@
             <p *ngIf="spider.genus || spider.species">{{spider.genus}} {{spider.species}}</p>
         </ion-card-content>
         <ion-item actions class="demo-card">
+            <!--
             <button clear item-left danger>
                 <ion-icon name='star'></ion-icon>Favorite
             </button>
@@ -21,10 +22,11 @@
             <button clear item-right danger>
                 <ion-icon name='share-alt'></ion-icon>Share
             </button>
+            -->
         </ion-item>
     </ion-card>
 </ion-content>
 
-<button fab fab-right fab-bottom (click)="addSpiderTapped()">
+<button fab fab-right fab-bottom (click)="gotoAddSpider()">
     <ion-icon name='add'></ion-icon>
 </button>
