rename page as we use it for more than creating new entries

--- a/app/pages/SpiderDetail.html
+++ b/app/pages/SpiderDetail.html
@@ -8,7 +8,7 @@
     </ion-buttons>
 </ion-navbar>
 
-<ion-content class="spider-add">
+<ion-content class="spider-detail">
     <ion-list>
         <ion-card [hidden]="!model.img">
             <img [src]="imgurl" />
