cleanup and naming conventions

--- a/app/pages/spider-edit.page.html
+++ b/app/pages/spider-edit.page.html
@@ -1,4 +1,4 @@
-<ion-navbar *navbar back-button-icon="camera">
+<ion-navbar *navbar>
     <ion-buttons start>
         <button nav-pop>Cancel</button>
     </ion-buttons>
